fix button text color contrast

--- a/src/components/buttons/Button.scss
+++ b/src/components/buttons/Button.scss
@@ -4,7 +4,7 @@
   border-radius: 4px;
   padding: 12px 16px 12px 12px;
   border: 1px solid var(--mid-grey);
-  color: var(--mid-grey);
+  color: var(--light-grey);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -34,7 +34,7 @@
     svg {
       path {
         transition: 0.25s ease-out;
-        stroke: var(--mid-grey);
+        stroke: var(--light-grey);
       }
     }
   }
